--- a/templates/index.html
+++ b/templates/index.html
@@ -12,5 +12,17 @@
         <input type="email" name="email" id=""/>
         <button type="submit">Enter</button>
     </form>
+    <div class="error-message">
+        {% with messages = get_flashed_messages()%}
+            {% if messages %}
+                <ul>
+                {% for message in messages %}
+                    <li>{{message}}</li>
+                {% endfor %}
+                </ul>
+            {% endif%}
+        {% endwith %}
+    </div>
+    
 </body>
 </html>
