--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -24,9 +24,10 @@
             {{comp['name']}}<br />
             Date: {{comp['date']}}</br>
             Number of Places: {{comp['numberOfPlaces']}}
-            {%if comp['numberOfPlaces']|int >0%}
+            {% if comp['numberOfPlaces']|int > 0 and comp['numberOfPlaces']|int < club['points']|int %}
             <a href="{{ url_for('book',competition=comp['name'],club=club['name']) }}">Book Places</a>
             {%endif%}
+            
         </li>
         <hr />
         {% endfor %}
