--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -19,12 +19,19 @@
     Points available: {{club['points']}}
     <h3>Competitions:</h3>
     <ul>
-        {% for comp in competitions%}
+        {% for comp in competitions %}
         <li>
             {{comp['name']}}<br />
-            Date: {{comp['date']}}</br>
-            Number of Places: {{comp['numberOfPlaces']}}
-            {% if comp['numberOfPlaces']|int > 0 and comp['numberOfPlaces']|int < club['points']|int %}
+            Date: {{comp['date']}}<br />
+            Number of Places: {{comp['numberOfPlaces']}}<br />
+            {% for c in comp['clubsRegistered'] %}
+                {% if club['name'] in c %}
+                    Places Reserved : {{ c[club['name']] }}<br />
+                {% endif %}
+            {%endfor%}
+            
+            
+            {% if comp['numberOfPlaces']|int > 0  %}
             <a href="{{ url_for('book',competition=comp['name'],club=club['name']) }}">Book Places</a>
             {%endif%}
             
