--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -6,7 +6,10 @@
     <title>Summary | GUDLFT Registration</title>
 </head>
 <body>
-        <h2>Welcome, {{club['email']}} </h2><a href="{{url_for('logout')}}">Logout</a>
+        <h2>Welcome, {{club['email']}} </h2>
+        <a href="{{url_for('logout')}}">Logout</a><br />
+        <a href="{{url_for('pointsBoard')}}">Points Board</a>
+
 
     {% with messages = get_flashed_messages()%}
     {% if messages %}
