--- a/templates/booking.html
+++ b/templates/booking.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Booking for {{competition['name']}} || GUDLFT</title>
+    <title>Booking for {{competition.name}} || GUDLFT</title>
 </head>
 <body>
-    <h2>{{competition['name']}}</h2>
+    <h2>{{competition.name}}</h2>
     Places available: {{competition['numberOfPlaces']}}
     <form action="/purchasePlaces" method="post">
         <input type="hidden" name="club" value="{{club['name']}}">
