--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -6,9 +6,9 @@
     <title>Summary | GUDLFT Registration</title>
 </head>
 <body>
-        <h2>Welcome, {{club['email']}} </h2>
+        <h2>Welcome, {{club.email}} </h2>
         <a href="{{url_for('logout')}}">Logout</a><br />
-        <a href="{{url_for('pointsBoard')}}">Points Board</a>
+        <a href="{{url_for('pointsBoard')}}">Points Board</a><br />
 
 
     {% with messages = get_flashed_messages()%}
@@ -19,22 +19,23 @@
         {% endfor %}
        </ul>
     {% endif%}
-    Points available: {{club['points']}}
+
+    Points available: {{club.points}}
     <h3>Competitions:</h3>
     <ul>
         {% for comp in competitions %}
         <li>
-            {{comp['name']}}<br />
-            Date: {{comp['date']}}<br />
-            Number of Places: {{comp['numberOfPlaces']}}<br />
-            {% for c in comp['clubsRegistered'] %}
-                {% if club['name'] in c %}
-                    Places Reserved : {{ c[club['name']] }}<br />
+            {{comp.name}}<br />
+            Date: {{comp.date}}<br />
+            Number of Places: {{comp.numberOfPlaces}}<br />
+            {% for c in comp.clubsRegistered %}
+                {% if club.name in c %}
+                    Places Reserved : {{ c[club.name] }}<br />
                 {% endif %}
             {%endfor%}
             
             
-            {% if comp['numberOfPlaces']|int > 0  %}
+            {% if comp.numberOfPlaces|int > 0 and comp.status == 'Upcoming' and club.points|int > 0 %}
             <a href="{{ url_for('book',competition=comp['name'],club=club['name']) }}">Book Places</a>
             {%endif%}
             
