--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -35,7 +35,7 @@
             {%endfor%}
             
             
-            {% if comp.numberOfPlaces|int > 0 and comp.status == 'Upcoming' and club.points|int > 0 %}
+            {% if comp.numberOfPlaces|int > 0 and comp.status == True and club.points|int > 0 %}
             <a href="{{ url_for('book',competition=comp['name'],club=club['name']) }}">Book Places</a>
             {%endif%}
             
